he empezado el rpg

--- a/Practica0/Practica0/Jueguito.ipynb
+++ b/Practica0/Practica0/Jueguito.ipynb
@@ -6,7 +6,19 @@
    "id": "600913c8-c42c-4dbd-a47d-65742daea1d2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class personaje:\n",
+    "    def __init__(self, name, live, damage)\n",
+    "        self.nombre = name\n",
+    "        self.vida = live\n",
+    "        self.dano = damage\n",
+    "\n",
+    "    def atacar(self)\n",
+    "        return self.dano\n",
+    "\n",
+    "    def daño(self, d)\n",
+    "        self.vida -= d"
+   ]
   }
  ],
  "metadata": {
