--- a/Practica0/Practica0/Jueguito.ipynb
+++ b/Practica0/Practica0/Jueguito.ipynb
@@ -17,7 +17,17 @@
     "        return self.dano\n",
     "\n",
     "    def daño(self, d)\n",
-    "        self.vida -= d"
+    "        self.vida -= d\n",
+    "\n",
+    "import numpy as np\n",
+    "class equipo:\n",
+    "    def __init__(self, p1, p2, p3)\n",
+    "        per = [p1, p2, p3]\n",
+    "        personajes = np.array(per)\n",
+    "\n",
+    "    def muerte(self, p)\n",
+    "        del self.personajes[p]\n",
+    "        "
    ]
   }
  ],
