Hemos puesto ambas cosas en base 100

--- a/Practica01 (1)/Enunciado/prac01.ipynb
+++ b/Practica01 (1)/Enunciado/prac01.ipynb
@@ -380,30 +380,24 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Testing: compute_cost_test\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'numpy.ndarray' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[28], line 10\u001b[0m\n\u001b[0;32m      3\u001b[0m csv \u001b[38;5;241m=\u001b[39m load_data_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./data/games-data.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mscore\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muser score\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m#csv son las columnas score y user score\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m#lrN = LinearRegNumpy(len(csv), len(csv[0]), csv[0], csv[1])\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m#print(\"First Part, Linear Regression\")\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m compute_cost_test_one(csv[\u001b[38;5;241m0\u001b[39m])\n",
-      "File \u001b[1;32mu:\\hlocal\\TPV Lin DV grupo V\\AA\\Practica01 (1)\\Enunciado\\public_tests.py:11\u001b[0m, in \u001b[0;36mcompute_cost_test_one\u001b[1;34m(target)\u001b[0m\n\u001b[0;32m      9\u001b[0m initial_w \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m\n\u001b[0;32m     10\u001b[0m initial_b \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3.0\u001b[39m\n\u001b[1;32m---> 11\u001b[0m cost \u001b[38;5;241m=\u001b[39m target(x, y, initial_w, initial_b)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCost case 1\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m cost \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCase 1: Cost must be 0 for a perfect prediction but got \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcost\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'numpy.ndarray' object is not callable"
-     ]
+     "data": {
+      "text/plain": [
+       "[array([99., 98., 98., ..., 17., 16., 11.]),\n",
+       " array([91., 74., 76., ..., 43., 13., 20.])]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#First Part, Linear Regression\n",
     "#Load_data ya llama al clean data\n",
     "csv = load_data_csv(\"./data/games-data.csv\", \"score\", \"user score\")\n",
-    "\n",
+    "#Poner dentro de Clean data \n",
+    "csv2 = [csv[0], csv[1] * 10]\n",
+    "csv2\n",
     "#csv son las columnas score y user score\n",
     "\n",
     "#lrN = LinearRegNumpy(len(csv), len(csv[0]), csv[0], csv[1])\n",
